# lsqkk.github.io

./: .gitignore  1  1.pub  1.py  2302.md  2304.md  2305.md  2501.html  2502.html  2502.md  2503.html  2503.md  2504.md  404.html  AGENTS.md  BingSiteAuth.xml  CNAME  about.html  about.md  ad.html  app.apk  article-list.html  article-templete.html  astro.config.mjs  auth.html  copyright.html  copyright.md  ds.html  dt.md  generate_posts.py  github_repos_lsqkk_20260127_230430.md  gpttest.html  index copy.html  index.html  jsconfig.json  l.html  log.html  mainpage.html  manifest.json  me.html  (+28 more)
.claude/: settings.local.json
a/: a.html  gps.html  index.html  index.js  me.html  nts.html  projects.json  style.css  test.html
api/: _cors.js  admin-auth.js  admin-verify.js  admin.js  client-info.js  db.js  deepseek-proxy.js  deepseek.js  email-send.js  email-verify.js  email.js  firebase-config.js  github-api-key.js  github-user.js  ip-info.js  ip.js  keys.js  openweather-key.js  quarkchat-key.js  r2-presign.js  recaptcha-assess.js  stream-proxy.js  tianditu-key.js  turnstile-verify.js
blog/: blog.css  blog.js  functions.json  index.html
chat/: chat.css  chat.js  index.html
css/: 404.css  article-list.css  cursor.css  ds.css  dt.css  estest.css  index.css  l.css  log.css  md.css  nav.css  post.css  qtv.css  room.css  stats.css  style.css  tool.css
daily/: articles.json  daily.css  hot.html  index.html
ds/: index.html  styles.css
dt/: dt.md  index.html
estest/: index.html  questions.json
fonts/: 1.md
games/: 2048.html  5ziqi-p.html  ball.html  game.js  game.json  (+5 more)
(+1088 files in other folders)
